patch AsyncClient.java